--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -9,3 +9,28 @@ appTitle=Hostel Management
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=Hostel Management
+
+
+# Facility Management Validation Messages
+selectBranchCode=Please select Branch Code
+enterFacilityName=Please enter Facility Name
+enterFacilityType=Please enter Facility Type
+enterFacilityPrice=Please enter Facility Price
+selectRateType=Please select Rate Type
+uploadFile=Please upload a file
+mandetoryFields=Make sure all the mandatory fields are filled/validate the entered value
+
+# Company Information - Shah Hostel
+companynameKT=Shah Hostel
+corporateOfficeAddress=Shah Hostel Address
+addressLine1=111, Kalpavriksha Karekal layout,
+addressLine2=Near, Railway Bridge, Kalaburagi,
+addressLine3=Karnataka 585102
+mobile=Mobile No : +91 9686145959
+compemail=Email: accounts@kalpavrikshatechnologies.com
+compwebsite=www.shahhostel.com
+footerCompName=© 2025 Shah Hostel
+warmRegards=Warm Regards,
+sendGreetingsFooter=Team Shah Hostel
+
+
