Customer Edit changes

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -33,4 +33,6 @@ footerCompName=© 2025 Shah Hostel
 warmRegards=Warm Regards,
 sendGreetingsFooter=Team Shah Hostel
 
+bookingDetailsTitle= Boking Details
+
 
