Enhance Payment Page and UI Components
- Added CSS class for centering UPI image in style.css.
- Refactored PaymentPage.fragment.xml to use SimpleForm for better layout and organization.
- Introduced new validation messages in i18n.properties for payment fields.
- Updated Bed_Details.view.xml and Facilitis.view.xml to change selection mode to MultiSelect and improved data binding.
- Modified Hostel.view.xml to enhance the FlexBox layout for bed types and added a Carousel for images.
- Refined Room_Details.view.xml to improve the table structure and data binding, including sorting and filtering capabilities.

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -35,4 +35,13 @@ sendGreetingsFooter=Team Shah Hostel
 
 bookingDetailsTitle= Boking Details
 
+# Payment field validation messages
+enterBankName=Enter Bank Name
+enterAmount=Enter Amount
+selectCurrency=Select Currency
+enterPaymentType=Enter Payment Type
+enterTransactionID=Enter Bank Transaction ID
+selectPaymentDate=Select Payment Date
+enterUPIID=Enter UPI ID
+
 
