Manage invoice new App development

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -32,7 +32,6 @@ compwebsite=www.shahhostel.com
 footerCompName=© 2025 Shah Hostel
 warmRegards=Warm Regards,
 sendGreetingsFooter=Team Shah Hostel
-
 bookingDetailsTitle= Boking Details
 
 # Payment field validation messages
@@ -44,4 +43,114 @@ enterTransactionID=Enter Bank Transaction ID
 selectPaymentDate=Select Payment Date
 enterUPIID=Enter UPI ID
 
-
+#XTIT: Manage Invoice Application
+invoiceapp= Manage Invoice
+invoiceApplication= Manage Invoice
+invoiceDetails= Manage Invoice Details
+invoiceTileDetail=Pending Invoice
+invoicedownload=Invoice Download
+invoiceApplication= Manage Invoice
+downloadsuccessfully=Data Download successfully
+addCustomerBtn= Add Customer
+customer= Customer
+selectAtLeastOneRecipient= select at least one recipient.
+customerName= Customer Name
+address= Address
+itemID= Sr No
+particulars= Particulars
+sac= SAC
+unit= Unit
+rateDay= Rate/Day
+invoiceItem= Invoice Item
+amountInFCurrency= Amount In Foreign Currency
+amountFcurrency= Amount F Currency
+amountInINR= Amount In INR
+PayByDate= Pay By Date
+invoiceBasicDetails= Invoice Basic Details
+invoiceDescription= Invoice Description
+companyInvoiceDescPlaceH= Enter the Description
+companyTableValidation = Please add at least one item to the invoice
+companyInvoiceConversionRatePlace= Enter the Conversion Rate
+dueAmountZeroOrNegative=Due amount cant be negative
+selectCustomer= Select Customer
+selectCurrency=Select Currency
+invoiceStatus= Invoice Status
+companyInvoiceSendEmail= Send Reminder
+Taxable= Taxable
+NonTaxable= Non Taxable
+invoiceTransaction= Transaction ID is required
+sendInvoiceText= Send Invoice
+custLutVa= LUT
+subTotal= Sub-Total
+mandatoryFieldsSow=Please fill in all required fields: Consultant Name, Designation, and Rate.
+InvoiceItemDetails = Invoice Item Details
+invoiceNo= Invoice No
+invoiceDate= Invoice Date
+status=Status
+totalAmount= Total Amount
+download = Download
+InvoiceAddBtn = Generate Invoice
+gstNo= GSTIN
+cgst= CGST/SGST
+cgs= CGST
+sgst= SGST
+igst= IGST
+type= Type
+expConversionRate=Exchange Rate
+panCardCommon=PAN Card
+currency=Currency
+mobileNo=Mobile No
+emailId=Email ID
+days= Days/Unit
+unitPrice= Unit Price
+percentage= Percentage
+invoiceNo= Invoice No
+invoiceDate= Invoice Date
+GSTCalculation= Taxable
+total= Total
+discount= Discount
+rate= Rate
+submit=Submit
+InvoiceDeleteBtn = Delete Invoice
+addInvItems = Add Invoice Item
+invoicePaymentTitle = Payment Detail
+invoiceTransactionIDValueText =Transaction ID is required
+invoiceTransactionID = Transaction ID
+invoiceReceivedDate = Received Date
+invoiceReceivedAmount = Received Amount
+invoiceReceivedIncomeTax = Received (TDS)
+invoiceReceivedTDS = Receivable TDS
+invoiceDueAmount =Due Amount
+invoiceRecivedTDSMess = TDS cant exceed 10% of total amount
+invoiceRecievedAmountMessage=Please check the invoice  amount, Due Amount cant be in Negative
+paymentMessage = Payment Received details submitted successfully
+convValueStateText=Please enter a valid conversion rate greater than 0
+invoiceCreatemsg = Invoice created sucessfully
+invoiceUpdateMess = Invoice updated successfully
+invoiceUpdateMessFailed = Invoice updated failed
+btnTransaction = View Transaction
+tdsAmountError=TDS amount must be less than the received amount
+ParticularValueText = Particular is required
+RateValueText = Rate is required
+UnitValueText = Unit is required
+CompanyInvoiceDeleteSuccess = Company invoice item deleted 
+roundOf = Round Off
+incomeTaxValue = Income tax percentage must be between 0 and 20
+city=City
+cityValueText = Select City
+CompanyDeleteMess=Invoice deleted successfully
+gstMessage = GST is mandatory for India
+GeneratePDF= Generate PDF
+customerID=Customer ID
+bookingID=Booking ID
+startDate= Start Date
+endDate= End Date
+yes= YES
+no= NO
+addInvoice= Add Invoice
+mandatoryFieldsError=Make sure all the mandatory fields are filled and validate the entered value
+technicalError=Technical error, please contact administrator
+selectBookingID=Select Booking ID
+dateValueState=Date required and it should be in the format dd/MM/yyyy
+emailValueState=Enter a valid email address (e.g., user@example.com)
+mobileNoValueState=A valid 10 digit mobile No is required
