Manage Invoice changes

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -111,6 +111,7 @@ total= Total
 discount= Discount
 rate= Rate
 submit=Submit
+close=Close
 InvoiceDeleteBtn = Delete Invoice
 addInvItems = Add Invoice Item
 invoicePaymentTitle = Payment Detail
