Bug fixes and changes in manage invoice

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -155,3 +155,19 @@ selectBookingID=Select Booking ID
 dateValueState=Date required and it should be in the format dd/MM/yyyy
 emailValueState=Enter a valid email address (e.g., user@example.com)
 mobileNoValueState=A valid 10 digit mobile No is required
+discountValueText =  Numbers and % symbol are allowed
+msgBoxConfirm = Confirm Deletion
+msgBoxConfirmDelete = Are you sure you want to delete the selected row?
+attachmentRequired=Please attach at least one file before sending the email
+emailSuccess=Email sent successfully
+logoutTooltip = Log Out
+tileFooter=Send Mail
+tileUnit=PDF,Send Mail
+sendMailFragMsg=Please use comma(,) to separate the Email ID
+toMailText=To Email ID
+ccMailText = CC Email IDs
+uploadAttachment = Upload Attachment
+filename = File Name
+FileType=File Type
+FileSize = File Size
+uploadSuccessfull=File uploaded successfully!
