Bug fixes and changes in manage invoice

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -171,3 +171,8 @@ filename = File Name
 FileType=File Type
 FileSize = File Size
 uploadSuccessfull=File uploaded successfully!
+OkButton=OK
+CancelButton=Cancel
+ManageInvoiceDeleteSuccess=Invoice item deleted successfully
+enterPin= Enter Valid Pin
+enterGST= Enter Valid GST Number
