Responsive and Radio Button

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -32,7 +32,7 @@ compwebsite=www.shahhostel.com
 footerCompName=© 2025 Shah Hostel
 warmRegards=Warm Regards,
 sendGreetingsFooter=Team Shah Hostel
-bookingDetailsTitle= Boking Details
+bookingDetailsTitle= Booking Details
 
 # Payment field validation messages
 enterBankName=Enter Bank Name
